# Overwatch-Bastion-in-ROS

./: LICENSE  README.md
bastion/: CHANGELOG.md  CMakeLists.txt  package.xml
bastion_description/: CMakeLists.txt  package.xml
bastion_description/launch/: publish_urdf.launch.py
bastion_description/models/bastion_v1/meshes/collisions/: base.stl  head.stl  left_arm.stl  left_leg.stl  right_arm.stl  right_leg.stl  waist.stl
bastion_description/models/bastion_v1/meshes/visuals/: base.dae  head.dae  left_arm.dae  left_leg.dae  right_arm.dae  right_leg.dae  waist.dae
bastion_description/models/bastion_v1/urdf/: bastion.urdf.xacro
bastion_gazebo/: CMakeLists.txt  package.xml
bastion_gazebo/config/: style.config
bastion_gazebo/launch/: spawn_bastion.launch.py  spawn_models.launch.py  start_simulation.launch.py  start_world.launch.py
bastion_gazebo/models/desk/: model.config
bastion_gazebo/models/lamp/: model.config
bastion_gazebo/worlds/: test_world.sdf
