<package>

    <!-- Initial package configuration -->
    <name>bastion</name>
    <version>0.0.1</version>
    <description>Bastion package for introduction</description>
    <maintainer email="elkinestrada1806@gmail.com">zitronensaft18</maintainer>
    <license>BSD-3-Clause</license>
    <author email="elkinestrada1806@gmail.com">zitronensaft18</author>
    
    <!-- Build to dependencies for ament package -->
    <buildtool_depend>ament_cmake</buildtool_depend>

    <!-- Dependencies for create package -->
    <run_depend>bastion_description</run_depend>
    <run_depend>bastion_gazebo</run_depend>

    <!-- Export dependencies -->
    <export>
        <build_type>ament_cmake</build_type>
    </export>
    
</package>